# spatial

./: .gitignore  CMakeLists.txt  README.md
cmake/: Finddoctest.cmake  Findtype_safe.cmake
src/spatial/: CMakeLists.txt  raster.hpp
src/spatial/algorithm/: algebra.hpp  scope.hpp
src/spatial/detail/: allocator.hpp  functor.hpp  proxy.hpp  traits.hpp  types.hpp  virtual_vector.hpp
src/spatial/io/: deserialize.hpp  driver.hpp  serialize.hpp
src/spatial/io/format/: wkb.hpp
src/spatial/raster/: axis.hpp  cell.cpp  cell.hpp  fwd.hpp  mdraster.hpp  raster.cpp  raster.hpp
src/spatial/raster/detail/: traits.hpp
src/spatial/vector/: linestring.hpp  point.hpp
src/spatial/vector/detail/: fwd.hpp  traits.hpp
tests/: CMakeLists.txt  test_point.cpp  test_raster.cpp
